force-app/main/default/objects/TravelVendorSettings__c/TravelVendorSettings__c.object-meta.xml
<CustomObject>
    <label>TravelVendorSettings</label>
    <nameField>
        <displayFormat>V-{0000}</displayFormat>
        <label>TravelVendorSettings Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TravelVendorSettings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>