force-app/main/default/objects/TravelVendorSettings__c/fields/isEnable__c.field-meta.xml
<CustomField>
    <fullName>isEnable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isEnable</label>
    <type>Checkbox</type>
</CustomField>