force-app/main/default/objects/TravelVendorSettings__c/fields/TravelVendor__c.field-meta.xml
<CustomField>
    <fullName>TravelVendor__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>TravelVendor</label>
    <referenceTo>TravelVendor__c</referenceTo>
    <relationshipLabel>TravelVendorSettings</relationshipLabel>
    <relationshipName>TravelVendorSettings</relationshipName>
    <type>Lookup</type>
</CustomField>